opengl buffers and shader set up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,6 @@ file(GLOB_RECURSE SRC_FILES src/*.cpp)
 
 add_library(luna ${SRC_FILES} vendor/libs/glad/src/glad.c)
 
-target_link_libraries(luna PUBLIC glfw)
+target_link_libraries(luna glfw)
 
 target_include_directories(luna PUBLIC ${LUNA_INCLUDE_DIRS})
